.workshop/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spawner
  annotations:
    homeroom/title: "Legacy Rehost Workshop"
    homeroom/description: "A sample workshop using AsciiDoc."
spec:
  rules:
  - host: "legacy-rehost-workshop.${CLUSTER_SUBDOMAIN}"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: spawner
          servicePort: 8080
